<resources>
    <string name="app_name">Nav_Recycler_Task</string>
    <string name="open">Open</string>
    <string name="close">close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_adb_fragment">ADB Fragment</string>
    <string name="hello_home_fragment">Home Fragment</string>
    <string name="hello_setting_fragment">Setting Fragment</string>
    <string name="hello_addPhoto_fragment">Add Photo Fragment</string>
    <string name="hello_chat_fragment">Chat Fragment</string>
    <string name="hello_Fav_fragment">Favorite Fragment</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="All_Records">All the Inserted Records.</string>
    <string name="addphoto">addPhoto</string>
    <string name="adb">ADB</string>
    <string name="profile">Profile</string>
    <string name="chat">Chat</string>
    <string name="favorite">Favorite</string>
    <string name="name">Name</string>
    <string name="Email">Email</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_email">Enter Email</string>
    <string name="add_record">Add Record</string>
    <string name="_1">1</string>
    <string name="raj_k">Raj K.</string>
    <string name="raj_k_gmail_com">raj_k@Gmail.com</string>
    <string name="no_records_found">No records Found</string>
    <string name="update_record">Update Record.</string>
    <string name="get_record">get_record</string>
    <string name="Updatename">Name</string>
    <string name="cancel">cancel</string>
    <string name="update">Update</string>
    <string name="search_record">Search_record</string>
    <string name="search">search</string>
    <string name="data">data</string>
    <string name="title_of_an_image">Title Of An Image</string>
    <string name="title_fragment">Title Fragment</string>
    <string name="description">Description</string>
    <string name="enter_message">Enter Message</string>
    <string name="send">send</string>
    <string name="reset">Reset</string>
    <string name="filter">Filter</string>
    <string name="Done">Done</string>
    <string name="articales">Articales</string>
    <string name="author">Author</string>
    <string name="publishedat">publishedAt</string>
    <string name="title">Title</string>
    <string name="Source">Source</string>
    <string name="sort_by">SORT BY</string>
</resources>