<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <group android:checkableBehavior="single">

        <item
            android:id="@id/id_homeFragment"
            android:checkable="true"
            android:checked="true"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/home" />

        <item
            android:id="@id/id_settingFragment"
            android:checkable="true"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/settings" />

        <item
            android:id="@id/id_chatFragment"
            android:checkable="true"
            android:icon="@drawable/ic_baseline_chat_24"
            android:title="@string/chat" />


    </group>

</menu>