<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/BottomSheet"
    android:layout_margin="8dp">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txtViewReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/reset"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/txtViewFilter"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txtViewFilter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/filter"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/txtViewDone"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/txtViewReset"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txtViewDone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/Done"
        android:textColor="@color/Orange"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/txtViewFilter"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/viewLine"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="@color/lightGray"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/txtViewFilter" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txtViewArticales"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:text="@string/articales"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewLine" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:chainUseRtl="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtViewArticales">

        <com.google.android.material.chip.Chip
            android:id="@+id/chipAuthor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/author"
            android:padding="4dp"
            android:backgroundTint="@color/white"
            app:chipStrokeColor="@color/black"
            android:checked="true"
            android:checkable="true"
            app:chipStrokeWidth="1dp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipPublishedAt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/publishedat"
            android:padding="4dp"
            android:checkable="true"
            android:backgroundTint="@color/white"
            app:chipStrokeColor="@color/black"
            app:chipStrokeWidth="1dp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:padding="4dp"
            android:checkable="true"
            android:backgroundTint="@color/white"
            app:chipStrokeColor="@color/black"
            app:chipStrokeWidth="1dp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipSource"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Source"
            android:padding="4dp"
            android:checkable="true"
            android:backgroundTint="@color/white"
            android:layout_marginStart="16dp"
            app:chipStrokeColor="@color/black"
            app:chipStrokeWidth="1dp" />

    </com.google.android.material.chip.ChipGroup>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/chipGroup"
        android:text="@string/sort_by"
        android:textSize="15sp"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/txtViewSortBy"/>

    <View
        android:id="@+id/viewLine2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="@color/lightGray"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/txtViewSortBy" />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/viewLine2"
       android:hint="Enter Details"
        android:layout_marginTop="8dp"
        android:paddingStart="8dp"
        android:textColor="@color/black"
        android:id="@+id/edTxtAuthor"
        tools:ignore="RtlSymmetry" />

<!--    <View-->
<!--        android:id="@+id/viewLine3"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="1dp"-->
<!--       android:layout_margin="16dp"-->
<!--        android:background="@color/lightGray"-->
<!--        android:orientation="vertical"-->
<!--        app:layout_constraintTop_toBottomOf="@id/txtViewAuthor" />-->


<!--    <com.google.android.material.textview.MaterialTextView-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="30dp"-->
<!--        app:layout_constraintTop_toBottomOf="@id/viewLine3"-->
<!--        android:text="@string/publishedat"-->
<!--        android:layout_margin="16dp"-->
<!--        android:paddingStart="8dp"-->
<!--        android:textColor="@color/black"-->
<!--        android:id="@+id/txtViewPublishAt"/>-->
<!--    <View-->
<!--        android:id="@+id/viewLine4"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="1dp"-->
<!--        android:layout_margin="16dp"-->
<!--        android:background="@color/lightGray"-->
<!--        android:orientation="vertical"-->
<!--        app:layout_constraintTop_toBottomOf="@id/txtViewPublishAt" />-->

<!--    <com.google.android.material.textview.MaterialTextView-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="30dp"-->
<!--        app:layout_constraintTop_toBottomOf="@id/viewLine4"-->
<!--        android:text="@string/title"-->
<!--        android:paddingStart="8dp"-->
<!--        android:layout_margin="16dp"-->
<!--        android:textColor="@color/black"-->
<!--        android:id="@+id/txtViewTitle"/>-->
    <View
        android:id="@+id/viewLine5"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="16dp"
        android:background="@color/lightGray"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/edTxtAuthor" />

    <View
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/viewLine5"/>





</androidx.constraintlayout.widget.ConstraintLayout>